--- a/index-dev.html
+++ b/index-dev.html
@@ -10,14 +10,14 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.5/ace.js"></script>
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css" />
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
-  <script src="https://unpkg.com/hotkeys-js@3.6.12/dist/hotkeys.js"></script>
+  <script src="https://unpkg.com/hotkeys-js@3.6.12/dist/hotkeys.min.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.js"></script>
 
   <script type="module" src="./index.js"></script>
   <link rel="stylesheet" href="./main.css" />
